# dapla-geoio

./: .cruft.json  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.md  reference.md
src/dapla-geoio/: __init__.py
src/dapla_geoio/: __init__.py  __main__.py  geoparquet.py  io.py
tests/: __init__.py  test_io.py
tests/data/: points.parquet
